2010-07-15  Shinichiro Hamaji  <hamaji@chromium.org>

        Unreviewed build fix.

        Printing test results differ between machines, we should use ImageDiff instead
        https://bugs.webkit.org/show_bug.cgi?id=20011

        * DumpRenderTree/PixelDumpSupport.cpp:
        (dumpWebViewAsPixelsAndCompareWithExpected):

2010-07-15  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        Printing test results differ between machines, we should use ImageDiff instead
        https://bugs.webkit.org/show_bug.cgi?id=20011

        * DumpRenderTree/PixelDumpSupport.cpp:
        (dumpWebViewAsPixelsAndCompareWithExpected):
        * DumpRenderTree/PixelDumpSupport.h:
        * DumpRenderTree/mac/PixelDumpSupportMac.mm:
        (createBitmapContext): This function was added to share bitmap context creation code.
        (createBitmapContextFromWebView):
        (createPagedBitmapContext):

2010-07-15  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Kent Tamura.

        Pull in pywebsocket-0.5.1
        https://bugs.webkit.org/show_bug.cgi?id=42353

        pywebsocket-0.5.1 contains a small bug fix (*) that should fix a worker test
        in Chromium. There is no other functional change.

        (*) http://code.google.com/p/pywebsocket/source/detail?r=265

        * Scripts/webkitpy/thirdparty/__init__.py: Bump pywebsocket version to 0.5.1.

2010-07-15  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig.

        Add toolbar and toolbar item validation for MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=42422

        * MiniBrowser/MBToolbarItem.h: Added.
        * MiniBrowser/MBToolbarItem.m: Added.
        (-[MBToolbarItem validate]):

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController validateUserInterfaceItem:]):

        * MiniBrowser/MiniBrowser.xcodeproj/project.pbxproj:
        * MiniBrowser/mac/BrowserWindow.xib:
