@@ -1,3 +1,14 @@
+2010-07-16  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Unreviewed tiger build fix.
+
+        Printing test results differ between machines, we should use ImageDiff instead
+        https://bugs.webkit.org/show_bug.cgi?id=20011
+
+        * DumpRenderTree/mac/PixelDumpSupportMac.mm:
+        (createBitmapContext):
+        (createBitmapContextFromWebView):
+
 2010-07-15  Shinichiro Hamaji  <hamaji@chromium.org>
 
         Unreviewed build fix.
